[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/TileSet.tres" type="TileSet" id=1]
[ext_resource path="res://Nodes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Panel.gd" type="Script" id=3]
[ext_resource path="res://Nodes/ActionButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Nodes/ActionLabel.tscn" type="PackedScene" id=5]

[node name="Main Game" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 65536, 0, 0, 65548, 0, 0, 65555, 0, 0, 131072, 0, 0, 131084, 0, 0, 131091, 0, 0, 196608, 0, 0, 196620, 0, 0, 196627, 0, 0, 262144, 0, 0, 262156, 0, 0, 262163, 0, 0, 327680, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327699, 0, 0, 393216, 0, 0, 393222, 0, 0, 393228, 0, 0, 393235, 0, 0, 458752, 0, 0, 458758, 0, 0, 458764, 0, 0, 458771, 0, 0, 524288, 0, 0, 524294, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524307, 0, 0, 589824, 0, 0, 589830, 0, 0, 589843, 0, 0, 655360, 0, 0, 655366, 0, 0, 655379, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 187.728, 147.411 )

[node name="Panel" type="Panel" parent="."]
margin_left = 263.0
margin_top = 461.0
margin_right = 764.0
margin_bottom = 603.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
action_button_node = ExtResource( 4 )
action_label_node = ExtResource( 5 )

[node name="AllowedActions" type="HBoxContainer" parent="Panel"]
margin_top = 99.2257
margin_right = 500.0
margin_bottom = 139.226
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionButton" parent="Panel/AllowedActions" instance=ExtResource( 4 )]
margin_left = 125.0
margin_right = 235.0
text = "example action"

[node name="ActionButton2" parent="Panel/AllowedActions" instance=ExtResource( 4 )]
margin_left = 245.0
margin_right = 374.0
text = "some other action"

[node name="SelectedActions" type="GridContainer" parent="Panel"]
margin_right = 40.0
margin_bottom = 40.0
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionLabel" parent="Panel/SelectedActions" instance=ExtResource( 5 )]

[node name="ClearButton" type="Button" parent="Panel"]
margin_left = 454.947
margin_top = 2.8316
margin_right = 498.947
margin_bottom = 22.8316
text = "Clear"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Panel/ClearButton" to="Panel" method="_on_ClearButton_pressed"]
